--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,8 +32,8 @@ bench-utils = { git = "https://github.com/arkworks-rs/utils", default-features =
 blake2 = { version = "0.8", default-features = false }
 digest = "0.8"
 
-gm17 = { git = "ssh://git@github.com/arkworks-rs/gm17.git", default-features = false }
-groth16 = { git = "ssh://git@github.com/arkworks-rs/groth16.git", default-features = false }
+ark-gm17 = { git = "https://github.com/arkworks-rs/gm17" }
+ark-groth16 = { git = "https://github.com/arkworks-rs/groth16" }
 
 ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std", branch = "update-to-ark", optional = true, default-features = false }
 
